Atualizar caminho de imagens

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <a>
    Administração
   </a>
-  <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+  <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li onclick="location.href='#';">
@@ -21,7 +21,7 @@
   <a>
   Agronomia
   </a>
-  <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+  <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li onclick="location.href='#';">
@@ -29,7 +29,7 @@
   <a>
    Arquitetura e Urbanismo
   </a>
-  <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+  <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li onclick="location.href='#';">
@@ -37,7 +37,7 @@
   <a>
    Biblioteconomia
   </a>
-  <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+  <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li>
@@ -45,7 +45,7 @@
   <a>
    Ciência da Computação
  </a>
- <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+ <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li>
@@ -53,7 +53,7 @@
   <a>
    Ciências Ambientais
  </a>
- <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+ <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li>
@@ -61,7 +61,7 @@
   <a>
    Ciências Biológicas
  </a>
- <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+ <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li>
@@ -69,7 +69,7 @@
   <a>
    Ciências Contábeis
  </a>
- <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+ <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li>
@@ -77,7 +77,7 @@
   <a>
    Ciências Econômicas
  </a>
- <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+ <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 
  <li onclick="location.href='/index_smd';">
@@ -85,7 +85,7 @@
   <a>
    Sistemas e Mídias Digitais
  </a>
- <img src="./images/icons/arrow-left.png" class="arrow-cursos">
+ <img src="/images/icons/arrow-left.png" class="arrow-cursos">
  </li>
 </ul>
 <div id="pageNavOverlay"></div> 
