--- a/views/partials/menu_logado.ejs
+++ b/views/partials/menu_logado.ejs
@@ -22,13 +22,13 @@
 
           <ul class="nav-primary">
             <li>
-              <a href="index.html">
+              <a href="/index">
                 <img src="/images/icons/home.png" class="icones">
                 Início
               </a>
             </li>
             <li>
-              <a href="index_smd">
+              <a href="/index_smd">
                 <img src="/images/icons/home.png" class="icones">
                 Meu Curso
               </a>
