Integracao front-end 2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,91 +1,10 @@
-<div class="photo-bg" id="foto_cursos">
-  <img src="/images/Foto-Cursos.png">
+<div class="photo-bg" id="foto_inicio">
+  <img src="images/Foto-inicio.png">
 </div>
 
-<h4>
-  Campus Fortaleza
-</h4>
-<div class="linha"></div>
+<button type="button" class="btn_home", onclick= "location.href='/cursos';">Cursos</button>
+<p>Saiba mais sobre os cursos de graduação da UFC</p>
 
-<ul class="lista-cursos">
- <li>
-  <span class="dot"></span>
-  <a>
-   Administração
-  </a>
-  <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li onclick="location.href='#';">
-  <span class="dot"></span>
-  <a>
-  Agronomia
-  </a>
-  <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li onclick="location.href='#';">
-  <span class="dot"></span>
-  <a>
-   Arquitetura e Urbanismo
-  </a>
-  <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li onclick="location.href='#';">
-  <span class="dot"></span>
-  <a>
-   Biblioteconomia
-  </a>
-  <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li>
-  <span class="dot"></span>
-  <a>
-   Ciência da Computação
- </a>
- <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li>
-  <span class="dot"></span>
-  <a>
-   Ciências Ambientais
- </a>
- <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li>
-  <span class="dot"></span>
-  <a>
-   Ciências Biológicas
- </a>
- <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li>
-  <span class="dot"></span>
-  <a>
-   Ciências Contábeis
- </a>
- <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li>
-  <span class="dot"></span>
-  <a>
-   Ciências Econômicas
- </a>
- <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-
- <li onclick="location.href='/index_smd';">
-  <span class="dot"></span>
-  <a>
-   Sistemas e Mídias Digitais
- </a>
- <img src="/images/icons/arrow-left.png" class="arrow-cursos">
- </li>
-</ul>
-<div id="pageNavOverlay"></div> 
+<button type="button" class="btn_home" id="desabilitado">Docentes</button>
+<p>Pesquise, acompanhe e solicite orientação para os professores</p>
+<div id="pageNavOverlay"></div>
