--- a/views/index_smd.ejs
+++ b/views/index_smd.ejs
@@ -1,48 +1,48 @@
 <div class="tabs-wrapper" id="tabsWrapper">
     <ul role="tablist" class="tabs" arial-label="tabs-description">
       <li>
-        <button role="tab" aria-selected="true" aria-controls="tab-1">Sobre</button>
-        <div tabindex="0" role="tabpanel" id="tab-1" aria-labelledby="tab-1" tabindex="0">
-          
-          <div class="photo-bg" id="Foto_SMD">
-            <img src="/images/Foto-SMD.png">
+          <button role="tab" aria-selected="true" aria-controls="tab-1">Sobre</button>
+          <div tabindex="0" role="tabpanel" id="tab-1" aria-labelledby="tab-1" tabindex="0">
+            
+            <img class="photo-bg" src="images/Foto-SMD.png">
+            <div>
+              <img class="icones" src="images/icons/curso_smd.png">
+              <h3 style="font-size: 18px">Onde Sistemas e Mídias Digitais caminham lado a lado</h3>
+            </div>
+            <p style="text-align: left; color: #1C1C1C;">
+            O curso forma profissionais de perfis como produção de midias digitais e desenvolvimento de sistemas multimídias.</p>
+            <p> 
+              Atualmente ele forma 4 trilhas de especialização:<span style="font-weight: bold;"> Audiovisual, Design Digital, Sistemas e Jogos.</span>
+            </p> 
+            <h3>Como Funciona o TCC?</h3>
+            <div class="linha"></div>
+              <p>
+                O SMD tem 3 tipos de trabalho de conclusão de curso:
+              </p>
+              <ul>
+                <li style="border-style: solid;border-width: 1px; border-radius: 15px; border-color: #1c1c1c; padding-bottom: 5%; margin-top: 5%;">
+                  <img src="images/icons/monografia.svg" style="float: left;clear: both;width: 50px; height: auto; padding-right: 3%;">
+                  Monografia
+                </li>
+    
+                <li style="border-style: solid;border-width: 1px; border-radius: 15px; border-color: #1c1c1c;padding-bottom: 5%;margin-top: 5%;">
+                  <img src="images/icons/monografia.svg" style="float: left;clear: both;width: 50px; height: auto; padding-right: 3%;">
+                  Artigo
+                </li>
+    
+                <li style="border-style: solid;border-width: 1px; border-radius: 15px; border-color: #1c1c1c;padding-bottom: 5%;margin-top: 5%;">
+                  <img src="images/icons/monografia.svg" style="float: left;clear: both;width: 50px; height: auto; padding-right: 3%;">
+                  Relatório Técnico
+                </li>
+              </ul>
           </div>
-          
-          <p style="text-align: center; margin-top: 15vh; color: #1C1C1C;">
-            Popularmente chamado de SMD, o curso forma profissionais de vários perfis capacitados em produção de mídias digitais e desenvolvimento de sistemas multimídias, como sistemas web e para dispositivos móveis, jogos digitais e animações gráficas. Atualmente, o curso possui 4 trilhas de especialização: <span style="font-weight: bold;"> Audiovisual, Design Digital, Sistemas e Jogos.</span>
-          </p> 
-  
-          <div class="linha"></div>
-  
-          <h3>Como Funciona o TCC?</h3>
-  
-          <h5>1. Monografia</h5>
-          <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
-  
-          <h5>2. Produto e Artigo</h5>
-          <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
-  
-          <h5>3. Produto e Relatório Técnico</h5>
-          <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
-  
-  
-        </div>>
       </li>
       <li>
         <button role="tab" aria-selected="false" aria-controls="tab-2">Audiovisual</button>
         <div tabindex="0" role="tabpanel" id="tab-2" aria-labelledby="tab-2" tabindex="0" hidden="">
 
             <% docentes.filter(docente => docente.trilhas.includes('Audiovisual')).forEach(function(docente){ %>
-              <div class="flutue responsive">
-                <img src="<%= docente.image%>" class="image-responsive" onclick = "location.href='/<%= docente.id_lattes %>';"> 
-                <div class="flutue-content">
-                  <h3> <%= docente.nome %> </h3 onclick = "location.href='/<%= docente.id_lattes %>';">
-                <button type="button" class="btn bg-blue inverse">Solicitar Orientação</button>
-                  <p onclick = "location.href='/<%= docente.id_lattes %>';">
-                    bla bla bla bla eu ensino isso isso e isso aqui
-                  </p>
-                </div>
-              </div>
+              <% include ./partials/card_docente %>
             <% }); %>
 
         </div>
@@ -52,16 +52,7 @@
         <button role="tab" aria-selected="false" aria-controls="tab-3">Design</button>
         <div tabindex="0" role="tabpanel" id="tab-3" aria-labelledby="tab-3" tabindex="0" hidden="">        
             <% docentes.filter(docente => docente.trilhas.includes('Design')).forEach(function(docente){ %>
-              <div class="flutue responsive">
-                <img src="<%= docente.image%>" class="image-responsive" onclick = "location.href='/<%= docente.id_lattes %>';"> 
-                <div class="flutue-content">
-                  <h3> <%= docente.nome %> </h3 onclick = "location.href='/<%= docente.id_lattes %>';">
-                <button type="button" class="btn bg-blue inverse">Solicitar Orientação</button>
-                  <p onclick = "location.href='/<%= docente.id_lattes %>';">
-                    bla bla bla bla eu ensino isso isso e isso aqui
-                  </p>
-                </div>
-              </div>
+              <% include ./partials/card_docente %>
             <% }); %>
         </div>
       </li>
@@ -70,16 +61,7 @@
         <button role="tab" aria-selected="false" aria-controls="tab-4">Sistemas</button>
         <div tabindex="0" role="tabpanel" id="tab-4" aria-labelledby="tab-4" tabindex="0" hidden="">
             <% docentes.filter(docente => docente.trilhas.includes('Sistemas')).forEach(function(docente){ %>
-              <div class="flutue responsive">
-                <img src="<%= docente.image%>" class="image-responsive" onclick = "location.href='/<%= docente.id_lattes %>';"> 
-                <div class="flutue-content">
-                  <h3> <%= docente.nome %> </h3 onclick = "location.href='/<%= docente.id_lattes %>';">
-                <button type="button" class="btn bg-blue inverse">Solicitar Orientação</button>
-                  <p onclick = "location.href='/<%= docente.id_lattes %>';">
-                    bla bla bla bla eu ensino isso isso e isso aqui
-                  </p>
-                </div>
-              </div>
+              <% include ./partials/card_docente %>
             <% }); %>        
         </div>
       </li>
@@ -88,16 +70,7 @@
           <button role="tab" aria-selected="false" aria-controls="tab-5">Jogos</button>
           <div tabindex="0" role="tabpanel" id="tab-5" aria-labelledby="tab-5" tabindex="0" hidden="">
               <% docentes.filter(docente => docente.trilhas.includes('Jogos')).forEach(function(docente){ %>
-                <div class="flutue responsive">
-                  <img src="<%= docente.image%>" class="image-responsive" onclick = "location.href='/<%= docente.id_lattes %>';"> 
-                  <div class="flutue-content">
-                    <h3> <%= docente.nome %> </h3 onclick = "location.href='/<%= docente.id_lattes %>';">
-                  <button type="button" class="btn bg-blue inverse">Solicitar Orientação</button>
-                    <p onclick = "location.href='/<%= docente.id_lattes %>';">
-                      bla bla bla bla eu ensino isso isso e isso aqui
-                    </p>
-                  </div>
-                </div>
+                <% include ./partials/card_docente %>
               <% }); %>        
           </div>
         </li>
