--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Ductu</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,13 +21,13 @@
     <link href='//fonts.googleapis.com/css?family=Roboto:400,300,600,700,800,900,300italic,600italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/css/buddy.plugins.min.css">
     <link rel="stylesheet" type="text/css" href="/css/buddy.css">
-  
+
+    <link href="https://fonts.googleapis.com/css?family=Barlow:400,600,700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="/js/buddy.min.js"></script>
   
     <!-- ICONES FONTAWESOME -->
     <script src="https://kit.fontawesome.com/fe18477891.js" crossorigin="anonymous"></script>
 
-    <title>Ductu</title>
 </head>
 
 <body>
